style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html, body {
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  color: #222;
  scroll-behavior: smooth;
}
.carousel-inner img {
  width: 100%;
  height: 100%;
}
.carousel-caption h1 {
  font-size: 400%;
  text-transform: uppercase;
  text-shadow: 1px 1px 15px #000;
}
.carousel-caption h3 {
  font-size: 200%;
  font-weight: 500;
  text-shadow: 1px 1px 10px #000;
  padding-bottom: 1rem;
}
.carousel-logo {
  top: 0;
  bottom: auto;
  filter:drop-shadow(1px 1px 5px #000);
}
.carousel-text {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
.jumbotron {
  padding: 1rem;
  border-radius: 0;
}
.padding {
  padding-bottom: 2rem;
}
.social a {
  font-size: 4.5em;
  padding: 3rem;
}
.fa-github {
  color: #6e5494;
}
.fa-bitbucket {
  color: #2684FF;
  text-shadow: 3px 3px 16px #272634;
}
.fa-itch-io {
  color: #fa5c5c;
}
.fa-linkedin {
  color: #0a66c2;
}
.fa-twitter {
  color: #00aced;
}
.fa-github:hover,
.fa-bitbucket:hover,
.fa-itch-io:hover,
.fa-linkedin:hover,
.fa-twitter:hover {
  color: #d5d5d5;
}
footer {
  background-color: #3f3f3f;
  color: #d5d5d5;
  padding-top: 2rem;
}
hr.light {
  border-top: 1px solid #d5d5d5;
  width: 50%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
footer a {
  color: #d5d5d5 
}
hr.light-100 {
  border-top: 1px solid #d5d5d5;
  width: 100%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}




/*---Media Queries --*/
@media (max-width: 992px) {
  .social a {
    font-size: 4em;
    padding: 2rem;
  }
  }
@media (max-width: 768px) {
  .carousel-text {
    top: 45%;
  }
  .carousel-caption h1 {
    font-size: 350%;
  }
  .carousel-caption h3 {
    font-size: 140%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  .social a {
    font-size: 2.5em;
    padding: 1.2rem;
  }
}
@media (max-width: 576px) {
  .carousel-text {
    top: 40%;
  }
  .carousel-text h1 {
    font-size: 250%;
  }
  .carousel-text h3 {
    font-size: 110%;
  }
  .carousel-caption.btn {
    font-size: 90%;
    padding: 4px 8px;
  }
  .carousel-indicators {
    display: none;
  }
  .social a {
    font-size: 2em;
    padding: .7rem;
  }
}


/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Fixed Background Image --*/
figure {
  position: relative;
  width: 100%;
  height: 60%;
  margin: 0!important;
}
.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url('img/mac.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}





/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

